--- a/scraper-data-alphabetical.html
+++ b/scraper-data-alphabetical.html
@@ -48,6 +48,18 @@
 "countryNumber": ""
 },
 {
+"lookout: "Blakey Ridge Fire Tower",
+"forest": "Madison County",
+"county": "null",
+"state": "Virginia",
+"coordinates": "N38° 25.644' W078° 20.228'",
+"elevation": 2140,
+"built": 1930,
+"image": "us746.jpg",
+"stateNumber": "8",
+"countryNumber": "746"
+},
+{
 "lookout: "Agawam Fire Tower",
 "forest": "Town of Agawam",
 "county": "Hamden County",
